--- a/e_commerce/shop/templates/a_shop/samples/navbar.html
+++ b/e_commerce/shop/templates/a_shop/samples/navbar.html
@@ -15,7 +15,7 @@
 }
 </style>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary custom-font-size">
+<nav class="navbar navbar-expand-lg bg-dark-subtle custom-font-size">
   <div class="container-fluid">
     <a class="navbar-brand fs-6" href="{% url 'shop:home' %}">Амуніція для своїх</a>
     <button
